data/derived/comb/progs/unify/prog1518.ml.out
Characters 16-19:
  let _ = concat ['H';'e';'l';'l';'o'];;
                  ^^^
Error: This expression has type char but an expression was expected of type
         string
